Add storybook deploy pipeline

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.20",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,6 +42,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test-storybook": "test-storybook",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "deploy-storybook": "gh-pages -d storybook-static"
   }
 }
