--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
           persist-credentials: false
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
-          npm ci
-          npm run build-storybook
+          yarn install --frozen-lockfile
+          yarn build-storybook
       - name: Deploy
         run: |
-          npm deploy-storybook
+          yarn deploy-storybook
