--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
+      - name: Configure git
+        run: |
+          git config user.name "GitHubActions"
+          git config user.email "<>"
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
           yarn install --frozen-lockfile
