--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build and Deploy Storybook
 on: 
   push:
     branches:
@@ -19,6 +19,7 @@ jobs:
         run: | # Install npm packages and build the Storybook files
           yarn install --frozen-lockfile
           yarn build-storybook
-      - name: Deploy
-        run: |
-          yarn deploy-storybook
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: storybook-static
