--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.20",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.8",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
@@ -31,7 +38,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.8.3"
+    "typescript": "*"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -43,6 +50,8 @@
     "build-storybook": "build-storybook",
     "test-storybook": "test-storybook",
     "build": "rollup -c",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix ."
   }
 }
